--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -28,6 +28,15 @@
           text-align: right;
           font-weight: bold; 
         }
+        
+    .titre1 {
+    	font-size:20px;
+    }
+    
+    .titre2 {
+    	font-size:15px;
+    }
+    
     </style>
 
 	<!-- Pour empêcher les effets sur combobox -->
@@ -41,7 +50,15 @@
 
 <window border="none" width="100%" height="100%" apply="com.servicelibre.zk.controller.ListeCtrl">
 
-	<label value="Corpus de littérature jeunesse"/>
+	<div align="center">
+		<label sclass="titre1" value="Gestion de corpus en ligne" />
+	</div>
+	
+	<div align="center">
+		<label sclass="titre2" value="MELS-cj: corpus de littérature jeunesse"/>
+	</div>
+
+
 	<tabbox>
 	<tabs >
 		<tab label="Listes" />
@@ -59,7 +76,7 @@
 			</combobox>
 
 				<combobox id="gp" readonly="true" width="100px">
-					<comboitem label="graphèmes" value="g" />
+					<comboitem label="mots" value="g" />
 					<comboitem label="phonèmes" value="p" />
 				</combobox>
 
@@ -105,22 +122,6 @@
 
 			</groupbox>
 			
-			
-			<zscript><![CDATA[
-		class Comp implements Comparator {
-			private boolean _asc;
-			public Comp(boolean asc) {
-				_asc = asc;
-			}
-			public int compare(Object o1, Object o2) {
-				String s1 = o1.getCatgram(),
-				s2 = o2.getCatgram();
-				int v = s1.compareTo(s2);
-				return _asc ? v: -v;
-			}
-		}
-		Comp asc = new Comp(true), dsc = new Comp(false);
-		]]></zscript>
 
 			<grid id="motsGrid" mold="paging" pageSize="25"
 				height="660px" width="700px" emptyMessage="Aucun mot trouvé.">
@@ -129,11 +130,11 @@
 				<columns sizable="true">
 
 					<column hflex="3" id="mot" label="Mot" sortDirection="ascending" sort="auto" />
-					<column hflex="1" label="Catégorie"  sort="auto(catgram)"/> <!--  sortAscending="${asc}"	sortDescending="${dsc} -->
-					<column hflex="1" label="Genre" sort="auto(genre)"/>
-					<column hflex="1" label="Nombre"  sort="auto(catgram)"/>
-					<column hflex="1" label="Précision" sort="auto(catgramPrésicion)"/>
-					<column hflex="2" label="Liste" sort="auto(liste)"/>
+					<column hflex="1" label="Catégorie"  sort="auto(catgram,lemme)"/> 
+					<column hflex="1" label="Genre" sort="auto(genre, lemme)"/>
+					<column hflex="1" label="Nombre"  sort="auto(catgram, lemme)"/>
+					<column hflex="1" label="Précision" sort="auto(catgramPrésicion, lemme)"/>
+					<column hflex="2" label="Liste" sort="auto(liste, lemme)"/>
 				</columns>
 				<rows />
 			</grid>
