--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -2,32 +2,28 @@
 
 <?link rel="stylesheet" type="text/css" href="/css/corpus.css"?>
 
-<?variable-resolver class="com.servicelibre.zk.controller.ListeCtrl"?>
-
-
 <zk>
 
 <!-- http://books.zkoss.org/wiki/ZK_Developer's_Reference/Performance_Tips/Listbox,_Grid_and_Tree_for_Huge_Data/Turn_on_Render_on_Demand -->
-<custom-attributes org.zkoss.zul.grid.rod="true" scope="page"/>
 
     <style>
-<!--     .z-label {  -->
-<!--       display: block;  -->
-<!--     }  -->
+
     tr.z-row td.z-row-inner { 
       padding: 2px 5px; 
     } 
-    <!-- .z-row-cnt, -->
+
     .z-column-cnt {
       text-align: center; 
     } 
+ 
     .category-center .z-auxheader-cnt { 
       text-align: center; 
     }
+ 
     .footer_right .z-footer-cnt {
           text-align: right;
           font-weight: bold; 
-        }
+    }
         
     .titre1 {
     	font-size:20px;
@@ -48,7 +44,7 @@
 		zul.inp.Bandbox.prototype.slideDown_ = zul.inp.Combobox.prototype.slideDown_;
 	]]></script>
 
-<window border="none" width="100%" height="100%" apply="com.servicelibre.zk.controller.ListeCtrl">
+<window border="none" width="100%" height="100%">
 
 	<div align="center">
 		<label sclass="titre1" value="Gestion de corpus en ligne" />
@@ -59,90 +55,36 @@
 	</div>
 
 
-	<tabbox>
-	<tabs >
-		<tab label="Listes" />
-		<tab label="Contextes" />
-	</tabs>
-	<tabpanels width="100%">
-		<tabpanel width="100%">
-
-		<groupbox>
-			<caption>Recherche</caption>
-			<hbox style="margin-top:10px;">
-
-			<combobox id="liste" readonly="true">
-			   <comboitem  forEach="${listes}" id="${each.id}" label="${each.nom}" value="${each.id}" description="${each.description}"/>
-			</combobox>
-
-				<combobox id="gp" readonly="true" width="100px">
-					<comboitem label="mots" value="g" />
-					<comboitem label="phonèmes" value="p" />
-				</combobox>
-
-				<combobox id="condition" readonly="true"
-					width="185px">
-					<comboitem label="commencent par"
-						value="MOT_COMMENCE_PAR" />
-					<comboitem label="se terminent par"
-						value="MOT_FINIT_PAR" />
-					<comboitem label="contiennent" value="MOT_CONTIENT" />
-					<comboitem label="correspondent exactement à"
-						value="MOT_ENTIER" />
-				</combobox>
-				
-				
-				<textbox id="cherche"></textbox>
-				<button id="boutonRecherche" label="Recherche"/>
-
-			</hbox>
-		</groupbox>
-
-		<hbox width="100%" style="margin-top:20px;">
-			<groupbox width="400px">
-				<caption>Filtre</caption>
-				<listbox id="nomFiltre" width="200px" mold="select"/>
-				<listbox id="valeurFiltre"  width="200px" mold="select"/>
-				
-				
-				<button id="boutonAjoutFiltre" label="ajouter"/>
-				
-				<grid id="gridFiltreActif" fixedLayout="true"
-					width="95%" style="margin-top:20px;" emptyMessage="Aucun filtre actif.">
-					<auxhead sclass="category-center">
-						<auxheader label="Filtres actifs" colspan="3"
-							rowspan="1" />
-					</auxhead>
-					<columns>
-						<column label="valeur" />
-						<column label="action" />
-					</columns>
-					<rows/>
-				</grid>
-
-			</groupbox>
-			
-
-			<grid id="motsGrid" mold="paging" pageSize="25"
-				height="660px" width="700px" emptyMessage="Aucun mot trouvé.">
-				<!-- 	emptyMessage="Aucun mot trouvé."		pagingPosition="both" sizedByContent="true"> -->
+	<tabbox width="100%">
+		<tabs width="100%">
+			<tab label="Listes" />
+			<tab label="Contextes" />
+		</tabs>
+		
+		<tabpanels width="100%">
+		
+		<!-- ************* -->
+		<!-- Onglet Listes -->
+		<!-- ************* -->
+			<tabpanel>
 	
-				<columns sizable="true">
-
-					<column hflex="3" id="mot" label="Mot" sortDirection="ascending" sort="auto" />
-					<column hflex="1" label="Catégorie"  sort="auto(catgram,lemme)"/> 
-					<column hflex="1" label="Genre" sort="auto(genre, lemme)"/>
-					<column hflex="1" label="Nombre"  sort="auto(catgram, lemme)"/>
-					<column hflex="1" label="Précision" sort="auto(catgramPrésicion, lemme)"/>
-					<column hflex="2" label="Liste" sort="auto(liste, lemme)"/>
-				</columns>
-				<rows />
-			</grid>
-		</hbox>
-		</tabpanel>
-		<tabpanel></tabpanel>
-	</tabpanels>
-</tabbox>
+				<include src="/listes.zul"/>
+			
+			</tabpanel>
+			
+		<!-- **************** -->
+		<!-- Onglet Contextes -->
+		<!-- **************** -->
+			
+			
+			<tabpanel>
+			
+				<include src="/contextes.zul"/>
+			
+			</tabpanel>
+			
+		</tabpanels>
+	</tabbox>
 
    
 </window>
