--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -1,4 +1,4 @@
-<?page title="Web corpus" contentType="text/html;charset=UTF-8"?>
+<?page id="webCorpusPage" title="Web corpus" contentType="text/html;charset=UTF-8"?>
 
 <?link rel="stylesheet" type="text/css" href="/css/corpus.css"?>
 
@@ -44,7 +44,7 @@
 		zul.inp.Bandbox.prototype.slideDown_ = zul.inp.Combobox.prototype.slideDown_;
 	]]></script>
 
-<window border="none" width="100%" height="100%">
+<window id="webCorpusWindow" border="none" width="100%" height="100%">
 
 	<div align="center">
 		<label sclass="titre1" value="Gestion de corpus en ligne" />
@@ -57,8 +57,8 @@
 
 	<tabbox width="100%">
 		<tabs width="100%">
-			<tab label="Listes" />
-			<tab label="Contextes" />
+			<tab id="listeTab" label="Listes" />
+			<tab id="contexteTab" label="Contextes" />
 		</tabs>
 		
 		<tabpanels width="100%">
@@ -66,9 +66,9 @@
 		<!-- ************* -->
 		<!-- Onglet Listes -->
 		<!-- ************* -->
-			<tabpanel>
+			<tabpanel id="listeTabpanel">
 	
-				<include src="/listes.zul"/>
+				<include id="listeInclude" src="/listes.zul"/>
 			
 			</tabpanel>
 			
@@ -77,9 +77,9 @@
 		<!-- **************** -->
 			
 			
-			<tabpanel>
+			<tabpanel id="contexteTabpanel">
 			
-				<include src="/contextes.zul"/>
+				<include id="contexteInclude" src="/contextes.zul"/>
 			
 			</tabpanel>
 			
