--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -1,4 +1,4 @@
-<?page title="Web corpus - Listes" contentType="text/html;charset=UTF-8"?>
+<?page id="listePage" title="Web corpus - Listes" contentType="text/html;charset=UTF-8"?>
 
 <?variable-resolver class="com.servicelibre.zk.controller.ListeCtrl"?>
 
@@ -6,7 +6,7 @@
 
 <custom-attributes org.zkoss.zul.grid.rod="true" scope="page"/>
 
-<window border="none" apply="com.servicelibre.zk.controller.ListeCtrl">
+<window id="listeWindow" border="none" apply="com.servicelibre.zk.controller.ListeCtrl">
 		<groupbox>
 		
 			<caption>Recherche</caption>
@@ -71,7 +71,6 @@
 				<!-- 	emptyMessage="Aucun mot trouvé."		pagingPosition="both" sizedByContent="true"> -->
 	
 				<columns sizable="true">
-
 					<column hflex="3" id="mot" label="Mot" sortDirection="ascending" sort="auto" />
 					<column hflex="1" label="Catégorie"  sort="auto(catgram,lemme)"/> 
 					<column hflex="1" label="Genre" sort="auto(genre, lemme)"/>
