--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -41,17 +41,19 @@
 
 		<hbox width="100%" style="margin-top:20px;">
 		
-		<!-- FIXME utiliser include => -->
-			<groupbox width="400px">
+		<!-- FIXME utiliser include width="400px  -->
+			<groupbox width="286px">
 				<caption>Filtre</caption>
-				<listbox id="nomFiltre" width="200px" mold="select"/>
-				<listbox id="valeurFiltre"  width="200px" mold="select"/>
+				<!-- width="200px" -->
+				<listbox id="nomFiltre"  style="width:100px" mold="select"/>
+				<!-- width="200px" -->
+				<listbox id="valeurFiltre" style="width:100px" mold="select"/>
 				
 				
 				<button id="boutonAjoutFiltre" label="ajouter"/>
 				
 				<grid id="gridFiltreActif" fixedLayout="true"
-					width="95%" style="margin-top:20px;" emptyMessage="Aucun filtre actif.">
+					 style="margin-top:20px;" emptyMessage="Aucun filtre actif.">
 					<auxhead sclass="category-center">
 						<auxheader label="Filtres actifs" colspan="3"
 							rowspan="1" />
@@ -65,9 +67,10 @@
 
 			</groupbox>
 			
-
+<!-- height="660px" width="700px"   -->
 			<grid id="motsGrid" mold="paging" pageSize="25"
-				height="660px" width="700px" emptyMessage="Aucun mot trouvé.">
+				height="660px" width="700px"
+				emptyMessage="Aucun mot trouvé.">
 				<!-- 	emptyMessage="Aucun mot trouvé."		pagingPosition="both" sizedByContent="true"> -->
 	
 				<columns sizable="true">
