--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -63,22 +63,28 @@
 
 			</groupbox>
 			
-			<!-- height="660px" width="700px" -->
-			<grid id="contextesGrid" mold="paging" pageSize="18"
-				 emptyMessage="Aucun contexte trouvé." height="660px" width="700px">
-				<!-- 	pagingPosition="both" sizedByContent="true"> -->
-	
-				<columns sizable="true">
-
-					<column hflex="3" id="contexte" label="Contexte" />
-<!-- 					<column hflex="1" label="Catégorie"  sort="auto(catgram,lemme)"/>  -->
-<!-- 					<column hflex="1" label="Genre" sort="auto(genre, lemme)"/> -->
-<!-- 					<column hflex="1" label="Nombre"  sort="auto(catgram, lemme)"/> -->
-<!-- 					<column hflex="1" label="Précision" sort="auto(catgramPrésicion, lemme)"/> -->
-<!-- 					<column hflex="2" label="Liste" sort="auto(liste, lemme)"/> -->
-				</columns>
-				<rows />
-			</grid>
+			<vbox  height="660px" width="700px">
+			
+					<label id="infoRésultats"  value=""  style="font-style:italic;text-align:center;"/>
+					
+					<!-- height="660px" width="700px" -->
+					<grid id="contextesGrid" mold="paging" pageSize="18"
+						 emptyMessage="Aucun contexte trouvé." height="640px" width="700px">
+						<!-- 	pagingPosition="both" sizedByContent="true"> -->
+			
+						<columns sizable="true">
+		
+							<column hflex="3" id="contexte" label="Contexte" />
+		<!-- 					<column hflex="1" label="Catégorie"  sort="auto(catgram,lemme)"/>  -->
+		<!-- 					<column hflex="1" label="Genre" sort="auto(genre, lemme)"/> -->
+		<!-- 					<column hflex="1" label="Nombre"  sort="auto(catgram, lemme)"/> -->
+		<!-- 					<column hflex="1" label="Précision" sort="auto(catgramPrésicion, lemme)"/> -->
+		<!-- 					<column hflex="2" label="Liste" sort="auto(liste, lemme)"/> -->
+						</columns>
+						<rows />
+					</grid>
+			</vbox>
+			
 		</hbox>	
 	
 	
