--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -14,7 +14,8 @@
 			
 			<textbox id="cherche"></textbox>
 			
-			<combobox id="voisinage" readonly="true">
+			<combobox id="voisinage" readonly="true" width="185px">
+				<comboitem label="dans une phrase complète" value="0"/>
 				<comboitem label="entouré de 5 mots" value="5"/>
 				<comboitem label="entouré de 6 mots" value="6"/>
 				<comboitem label="entouré de 7 mots" value="7"/>
