--- a/web/src/main/webapp/css/corpus.css
+++ b/web/src/main/webapp/css/corpus.css
@@ -25,3 +25,28 @@ body {
 	width: 1030px;
 	height: 830px
 }
+
+ tr.z-row td.z-row-inner { 
+      padding: 2px 5px; 
+    } 
+
+    .z-column-cnt {
+      text-align: center; 
+    } 
+ 
+    .category-center .z-auxheader-cnt { 
+      text-align: center; 
+    }
+ 
+    .footer_right .z-footer-cnt {
+          text-align: right;
+          font-weight: bold; 
+    }
+        
+    .titre1 {
+    	font-size:20px;
+    }
+    
+    .titre2 {
+    	font-size:15px;
+    }
