--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -6,34 +6,7 @@
 
 <!-- http://books.zkoss.org/wiki/ZK_Developer's_Reference/Performance_Tips/Listbox,_Grid_and_Tree_for_Huge_Data/Turn_on_Render_on_Demand -->
 
-    <style>
-
-    tr.z-row td.z-row-inner { 
-      padding: 2px 5px; 
-    } 
-
-    .z-column-cnt {
-      text-align: center; 
-    } 
- 
-    .category-center .z-auxheader-cnt { 
-      text-align: center; 
-    }
- 
-    .footer_right .z-footer-cnt {
-          text-align: right;
-          font-weight: bold; 
-    }
-        
-    .titre1 {
-    	font-size:20px;
-    }
-    
-    .titre2 {
-    	font-size:15px;
-    }
-    
-    </style>
+    <style src="/css/corpus.css"/>
 
 	<!-- Pour empêcher les effets sur combobox -->
 	<script defer="true"><![CDATA[
@@ -47,19 +20,8 @@
 	
 <window id="webCorpusWindow" border="none" width="100%" height="100%">
 
-	<zscript><![CDATA[
-		com.servicelibre.corpus.entity.Corpus corpus = com.servicelibre.controller.ServiceLocator.getCorpusService().getCorpus();
-	]]></zscript>
+	<include id="entete" src="/entete.zul"/>
 	
-	<div align="center">
-		<label sclass="titre1" value="Gestion de corpus en ligne" />
-	</div>
-	
-	<div align="center">
-		<label id="nomCorpus" sclass="titre2" value="${corpus.description}"/>
-	</div>
-
-
 	<tabbox width="100%">
 		<tabs width="100%">
 			<tab id="listeTab" label="Listes" />
