Authentification fonctionnelle (régression version Spring 3.0.6 vers 3.0.5 / bug «One Bad Credentials forever Bad Credentials», traduction message d'erreur, logging Spring security, uniformisation version Spring via servicelibre-parent)

--- a/web/src/main/webapp/entete.zul
+++ b/web/src/main/webapp/entete.zul
@@ -20,7 +20,7 @@
 				value="${corpus.description}" />
 		</div>
 
-		<div align="center" if="${sec:isAllGranted('utilisateur')}">
+		<div align="center" if="${sec:isAllGranted('ROLE_UTILISATEUR')}">
 			${authentication.principal.username} (
 			<a href="/quitter">Quitter</a>
 			)
