--- a/web/src/main/webapp/authentification.zul
+++ b/web/src/main/webapp/authentification.zul
@@ -5,13 +5,6 @@
 
 	<include id="entete" src="/entete.zul"/>
 
-    <html style="color:red" if="${not empty param.erreur_authentification}">
-      <![CDATA[
-         Erreur lors de l'authentification, veuillez essayer à nouveau.<br/><br/>
-         Plus d'information: ${SPRING_SECURITY_LAST_EXCEPTION.message} 
-        ]]> 
-    </html>
- 
  <div align="center" width="500px" style="margin-left: auto; margin-right: auto; margin-top:40px;" >
     <groupbox>
     <caption>Authentification</caption>
@@ -19,6 +12,7 @@
     <h:form id="f" name="f" action="j_spring_security_check" method="POST" xmlns:h="native">
         <grid>
             <rows>
+            	<row if="${not empty param.erreur_authentification}" spans="2"><label style="color:red">${SPRING_SECURITY_LAST_EXCEPTION.message}</label></row>
                 <row>Nom d'utilisateur: <textbox id="u" name="j_username" focus="true" /></row>
                 <row>Mot de passe: <textbox id="p" type="password" name="j_password"/></row>
 <!--                 <row><checkbox id="r" name="j_spring_security_remember_me"/>Ne plus me demander mon mot de passe pendant 2 semaines</row> -->
