- première version onglet d'affichage du détails des contextes - refactor ListeCtrl et ContexteCtrl (ancêtre commun) - réduction taille listes de test

--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -12,7 +12,7 @@
 					value="TOUTES_LES_FORMES_DU_MOT" />
 			</combobox>
 			
-			<textbox id="cherche"></textbox>
+			<textbox id="cherche" focus="true"></textbox>
 			
 			<combobox id="voisinage" readonly="true" width="185px">
 				<comboitem label="dans une phrase complète" value="0"/>
