--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -22,13 +22,13 @@
 
 	<include id="entete" src="/entete.zul"/>
 	
-	<tabbox width="100%">
-		<tabs width="100%">
+	<tabbox id="corpusTabbox" width="100%">
+		<tabs id="corpusTabs" width="100%">
 			<tab id="listeTab" label="Listes" />
 			<tab id="contexteTab" label="Contextes" />
 		</tabs>
 		
-		<tabpanels width="100%">
+		<tabpanels id="corpusTabpanels" width="100%">
 		
 		<!-- ************* -->
 		<!-- Onglet Listes -->
