--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -49,6 +49,8 @@
 				<textbox id="cherche" focus="true"></textbox>
 				
 				<button id="boutonRecherche" label="Recherche"/>
+				<button  id="effacerRecherche" image="/images/effacer-16x16.png"
+                    width="32px" orient="horizontal" tooltiptext="réinitialiser la recherche"/>  
 			</hbox>
 			
 			<!-- L'alphabet phonétiqe est inséré ici dynamiquement -->
@@ -58,27 +60,27 @@
 
 		<hbox width="100%" style="margin-top:20px;">
 		
-		<!-- FIXME utiliser include width="400px  -->
+		<!-- FIXME utiliser include  -->
 			<groupbox width="286px">
 				<caption>Filtre</caption>
-				<!-- width="200px" -->
-				<listbox id="nomFiltre"  style="width:100px" mold="select"/>
-				<!-- width="200px" -->
-				<listbox id="valeurFiltre" style="width:100px" mold="select"/>
+				<listbox id="nomFiltre"  style="width:140px" mold="select"/>
+				<listbox id="valeurFiltre" style="width:140px" mold="select"/>
 				
-				
-				<button id="boutonAjoutFiltre" label="ajouter"/>
+				<div align="center" style="margin-top:10px;">
+<!-- 					<button id="boutonAjoutFiltre" label="ajouter" disabled="false" image=""/> -->
+					 <button  id="boutonAjoutFiltre" image="/images/flècheBleueBas-16x16.png"
+                    hoverImage="/images/flècheVerteBas-16x16.png" width="70px" orient="horizontal" dir="reverse" tooltiptext="ajouter le filtre et la valeur sélectionnés aux filtres actifs"/>
+					 <button  id="boutonEffacerFiltre" image="/images/effacer-16x16.png"
+                    width="32px" orient="horizontal" tooltiptext="supprimer tous les filtres actifs"/>                    
+				</div>
 				
 				<grid id="gridFiltreActif" fixedLayout="true"
-					 style="margin-top:20px;" emptyMessage="Aucun filtre actif.">
+					 style="margin-top:10px;" emptyMessage="Aucun filtre actif.">
 					<auxhead sclass="category-center">
-						<auxheader label="Filtres actifs" colspan="3"
+						<auxheader label="Filtres actifs" colspan="2"
 							rowspan="1" />
 					</auxhead>
-					<columns>
-						<column label="valeur" />
-						<column label="action" />
-					</columns>
+					<columns/>
 					<rows/>
 				</grid>
 
