--- a/web/src/main/webapp/css/corpus.css
+++ b/web/src/main/webapp/css/corpus.css
@@ -69,3 +69,21 @@ body {
  .groupe {
   font-weight: bold;
  }
+ 
+ .apiLettre {
+	margin-right:3px; 
+	padding:3px; 
+	font-size:15px; 
+	font-family: 'Doulos SIL', 'Gentium', 'DejaVu Sans', 'Lucida Grande', 'Segoe UI', 'Arial Unicode MS', 'Adobe Pi Std', 'Lucida Sans Unicode', 'Chrysanthi Unicode', Code2000, Gentium, GentiumAlt, 'TITUS Cyberbit Basic', 'Bitstream Vera Sans', 'Bitstream Cyberbit', 'Hiragino Kaku Gothic Pro', 'Matrix Unicode', 'Charis SIL' ,sans-serif;
+}
+
+.apiCrochet {
+	font-family: 'Doulos SIL', 'Gentium', 'DejaVu Sans', 'Lucida Grande', 'Segoe UI', 'Arial Unicode MS', 'Adobe Pi Std', 'Lucida Sans Unicode', 'Chrysanthi Unicode', Code2000, Gentium, GentiumAlt, 'TITUS Cyberbit Basic', 'Bitstream Vera Sans', 'Bitstream Cyberbit', 'Hiragino Kaku Gothic Pro', 'Matrix Unicode', 'Charis SIL' ,sans-serif;
+}
+
+.apiLettre:hover {
+	border: solid 2px;
+	margin-right:1px; 
+	padding: 2px;
+	cursor:  pointer;
+}
