--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -4,24 +4,6 @@
 
 <zk>
 
-<style>
-
-.apiLettre {
-	margin-right:3px; 
-	padding:3px; 
-	font-size:15px; 
-	font-family: 'Doulos SIL', 'Gentium', 'DejaVu Sans', 'Lucida Grande', 'Segoe UI', 'Arial Unicode MS', 'Adobe Pi Std', 'Lucida Sans Unicode', 'Chrysanthi Unicode', Code2000, Gentium, GentiumAlt, 'TITUS Cyberbit Basic', 'Bitstream Vera Sans', 'Bitstream Cyberbit', 'Hiragino Kaku Gothic Pro', 'Matrix Unicode', 'Charis SIL' ,sans-serif;
-}
-
-.apiLettre:hover {
-	border: solid 2px;
-	margin-right:1px; 
-	padding: 2px;
-	cursor:  pointer;
-}
-
-</style>
-
 <custom-attributes org.zkoss.zul.grid.rod="true" scope="page"/>
 
 <window id="listeWindow" border="none" apply="com.servicelibre.zk.controller.ListeCtrl">
@@ -96,12 +78,14 @@
 					<!-- 	emptyMessage="Aucun mot trouvé."		pagingPosition="both" sizedByContent="true"> -->
 		
 					<columns sizable="true">
-						<column hflex="3" id="mot" label="Mot" sortDirection="ascending" sort="auto" />
-						<column hflex="1" label="Catégorie"  sort="auto(catgram,lemme)"/> 
-						<column hflex="1" label="Genre" sort="auto(genre, lemme)"/>
-						<column hflex="1" label="Nombre"  sort="auto(catgram, lemme)"/>
-						<column hflex="1" label="Précision" sort="auto(catgramPrésicion, lemme)"/>
-						<column hflex="2" label="Liste" sort="auto(liste, lemme)"/>
+						<column width="100px" id="mot" label="Mot" sortDirection="ascending" sort="auto" />
+						<column width="100px" label="Prononciations"  sort="auto(prononciations,lemme)" visible="true"/> 
+						<column width="40px" label="RO"  sort="auto(ro,lemme)"/> 
+						<column width="80px" label="Catégorie"  sort="auto(catgram,lemme)"/> 
+						<column width="50px" label="Genre" sort="auto(genre, lemme)"/>
+						<column width="60px" label="Nombre"  sort="auto(nombre, lemme)"/>
+						<column width="70px" label="Précision" sort="auto(catgramPrésicion, lemme)"/>
+						<column  label="Liste" sort="auto(liste, lemme)"/>
 					</columns>
 					<rows />
 				</grid>
